--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -7,7 +7,7 @@
   .active {
     background-color: $grad-init;
     border-radius: 5px;
-    color: #fff;
+    color: $light-color;
   }
 
   .icon-container {
