--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -9,6 +9,7 @@ $primary-light: #fe673a;
 $dark-red: #d60015;
 $hyper-link-color: #0285c4;
 $hyper-link-hover-color: #15578f;
+$buttons: #343a40;
 $command: #c0341d;
 $codes: #505050;
 $nav-border-color: #e3864e;
