hide/show scroll button after 800 viewpoint

--- a/src/assets/scss/components/scroll-to-top.scss
+++ b/src/assets/scss/components/scroll-to-top.scss
@@ -5,6 +5,7 @@
   bottom: 30px;
   box-shadow: 2px 2px 5px $shadow-color;
   cursor: pointer;
+  display: none;
   height: 50px;
   position: fixed;
   right: 20px;
