Ui/icons picker responsive

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -1,8 +1,8 @@
 .icons-list {
   @extend .flex;
   @extend .flex-wrap;
-  justify-content: flex-start;
   margin-bottom: $xxxl;
+  width: fit-content;
 
   .active {
     background-color: $grad-init;
