--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -14,7 +14,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    font-size: 13px;
+    font-size: $font-size-body;
     font-weight: 300;
     padding: $m;
     width: 130px;
