--- a/src/assets/scss/components/badge.scss
+++ b/src/assets/scss/components/badge.scss
@@ -1,7 +1,7 @@
 .badge {
   background-color: #6c757d;
   border-radius: 100px;
-  color: #fff;
+  color: $light-color;
   display: inline-block;
   line-height: 1;
   margin: 0 4px;
