--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -1,6 +1,6 @@
 header {
   align-items: center;
-  background: linear-gradient(90deg, #fbb369, #ff814a);
+  background: $nav-gradient;
   display: flex;
   justify-content: space-between;
   padding: $m;
@@ -12,7 +12,6 @@ header {
     align-items: center;
     color: $light-color;
     display: flex;
-    font-size: 2rem;
 
     .logo {
       margin-right: $m;
@@ -25,7 +24,7 @@ header {
 
     a,
     a:visited {
-      color: rgba(255, 255, 255, 0.5);
+      color: $navbar-color;
       padding: 0 8px;
       text-decoration: none;
     }
