--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -13,6 +13,7 @@ $buttons: #343a40;
 $command: #c0341d;
 $codes: #505050;
 $nav-border-color: #e3864e;
+$navbar-color: rgba(255, 255, 255, 0.5);
 $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 $modal-background-color: rgba(0, 0, 0, 0.7);
 
@@ -21,3 +22,5 @@ $modal-background-color: rgba(0, 0, 0, 0.7);
 $grad-init: #ff890a;
 $grad-middle: #ff420a;
 $grad-final: #bc0289;
+$nav-gradient: linear-gradient(90deg, #fbb369, #ff814a);
+$header-gradient: linear-gradient(90deg, #694966, #5c415d);
