Fixed lint error

--- a/src/assets/scss/pages/cookies.scss
+++ b/src/assets/scss/pages/cookies.scss
@@ -63,7 +63,7 @@
   }
 
   input:checked[disabled] {
-    background-color: $light-gray
+    background-color: $light-gray;
   }
 
   input:checked + .slider:before {
