--- a/src/assets/scss/components/buttons.scss
+++ b/src/assets/scss/components/buttons.scss
@@ -17,18 +17,19 @@
   }
 
   &-default {
-    background-color: #ff890a;
-    border-color: #ff890a;
-    color: white;
+    background-color: $grad-init;
+    border-color: $grad-init;
+    color: $light-color;
 
     &:hover {
-      background-color: #f87136;
-      color: white;
+      background-color: $primary-light;
+      border-color: $primary-light;
+      color: $light-color;
     }
   }
 
   &-primary {
-    background-color: #343a40;
+    background-color: $buttons;
     border-color: $buttons;
     color: $light-color;
 
