--- a/src/assets/scss/components/tabs.scss
+++ b/src/assets/scss/components/tabs.scss
@@ -29,10 +29,13 @@
 
 @media screen and (max-width: 650px) {
   .tabs {
-    margin-top: 0;
+    margin-top: -16px;
 
-    .tab-list-active {
+    .tab-list {
       background-color: $lightest-gray;
+      padding-top: 10px;
+      top: 130px;
+      width: 100%;
     }
   }
 }
