Responsive - Home page

--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -17,6 +17,14 @@ header {
       margin-right: $m;
       width: 86px;
     }
+
+    .brand-text {
+
+      @media (max-width: 413px) {
+        display: none;
+      }
+    }
+
   }
 
   nav {
