--- a/src/assets/scss/base/flex.scss
+++ b/src/assets/scss/base/flex.scss
@@ -21,3 +21,11 @@
     flex-wrap: wrap;
   }
 }
+
+.flex-wrap-sm {
+  @media (max-width: 413px) {
+
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
