change var and class from md to eos

--- a/src/assets/scss/base/icons.scss
+++ b/src/assets/scss/base/icons.scss
@@ -1,4 +1,4 @@
-.md-18 { font-size: $eos-md-18; }
-.md-24 { font-size: $eos-md-24; }
-.md-36 { font-size: $eos-md-36; }
-.md-48 { font-size: $eos-md-48; }
+.eos-18 { font-size: $eos-18; }
+.eos-24 { font-size: $eos-24; }
+.eos-36 { font-size: $eos-36; }
+.eos-48 { font-size: $eos-48; }
