--- a/src/assets/scss/components/download-eos-icons.scss
+++ b/src/assets/scss/components/download-eos-icons.scss
@@ -5,7 +5,7 @@
   color: $light-color;
   display: flex;
   flex-direction: row;
-  height: $eos-md-48;
+  height: $eos-48;
   padding-right: $s;
   position: fixed;
   right: -150px;
