--- a/src/assets/scss/variables/spacings.scss
+++ b/src/assets/scss/variables/spacings.scss
@@ -7,10 +7,10 @@
 */
 $font-size-body: 14px;
 $space-base: 16px;
-$eos-md-18: 18px;
-$eos-md-24: 24px;
-$eos-md-36: 36px;
-$eos-md-48: 48px;
+$eos-18: 18px;
+$eos-24: 24px;
+$eos-36: 36px;
+$eos-48: 48px;
 
 $m: $space-base; // this is the regular size = 16px
 $xs: $m / 4; // = 4px
