Fix: Added GTM and changed count

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -39,7 +39,7 @@
   &-category {
     display: flex;
     flex-direction: column;
-    margin-top: $xxl;
+    margin-top: $m;
 
     h3 {
       color: $primary-light;
