align all icons vertically middle

--- a/src/assets/scss/base/icons.scss
+++ b/src/assets/scss/base/icons.scss
@@ -2,3 +2,4 @@
 .eos-24 { font-size: $eos-24; }
 .eos-36 { font-size: $eos-36; }
 .eos-48 { font-size: $eos-48; }
+.eos-icons { vertical-align: middle; }
