add download svg button

--- a/src/assets/scss/base/inputs.scss
+++ b/src/assets/scss/base/inputs.scss
@@ -11,9 +11,15 @@ input {
     border-radius: 25px 0 0 25px;
   }
 
+  button {
+    border-radius: 0px;
+    border-right: $light-color 2px solid;
+  }
+  
   button:last-child,
   .btn:last-child {
     border-radius: 0 25px 25px 0;
+    border-right: 0px;
   }
 
   .input-grow {
