--- a/src/assets/scss/variables/spacings.scss
+++ b/src/assets/scss/variables/spacings.scss
@@ -19,3 +19,5 @@ $l: $m + ($m / 2); // = 24px
 $xl: $m * 2; // = 32px
 $xxl: $m * 3; // = 48px
 $xxxl: $m * 4; // = 64px
+
+$editor-icon-size: 10em; //font size for icon preview in Editor window
