added loading state on exporting icon

--- a/src/assets/scss/components/icon-editor.scss
+++ b/src/assets/scss/components/icon-editor.scss
@@ -99,5 +99,11 @@
     position: fixed;
     right: 15px;
   }
+
+  .btn-loading-icon {
+    margin-left: $s;
+    vertical-align: middle;
+    width: $l;
+  }
 }
   
