--- a/src/assets/scss/components/icon-editor.scss
+++ b/src/assets/scss/components/icon-editor.scss
@@ -117,7 +117,7 @@
       background-color: $light-color;
       border: 0px;
       border-radius: $xs;
-      box-shadow: 1px $m/8 $xs rgba($color: $dark-color, $alpha: 0.3);
+      box-shadow: 1px 2px $xs rgba($color: $dark-color, $alpha: 0.3);
       color: $dark-gray;
       margin-left: $m;
 
@@ -126,7 +126,7 @@
         color: $light-color;
         transition-duration: 0.2s;
       }
-      
+
       &:focus {
         outline: none;
       }
