--- a/src/assets/scss/components/dropdown.scss
+++ b/src/assets/scss/components/dropdown.scss
@@ -1,34 +1,31 @@
 .dropdown {
-  margin-top: 20px;
+  margin-top: $xs;
   overflow: hidden;
   position: relative;
   width: 100%;
+
+  select {
+    background: transparent;
+    cursor: pointer;
+    outline: 0;
+    width: 100%;
+  }
 }
 
-.dropdown select {
-  -webkit-appearance: none;
-  background: transparent;
-  background-image: 0;
-  border: 0;
-  box-shadow: 0;
-  cursor: pointer;
-  outline: 0;
-  width: 100%;
-}
 
 .fill-dropdown {
   background: $buttons;
-  border-radius: 50px;
-  box-shadow: 0px 10px 10px -6px rgba(0, 0, 0, 0.25);
-}
+  border-radius: $xl;
+  box-shadow: 0px $s $s -6px rgba(0, 0, 0, 0.25);
 
-.fill-dropdown select {
-  color: $light-color;
-  font: 400 16px/1 'Montserrat', sans-serif;
-  letter-spacing: 2px;
-  padding: 14px 38px 14px 16px;
-}
+  select {
+    color: $light-color;
+    padding: $s;
+  }
 
-.fill-dropdown select option {
-  color: $light-color;
+  option {
+    background-color: $buttons;
+    border-radius: $m;
+    padding: $s;
+  }
 }
