add export as images button

--- a/src/assets/scss/components/customize-icons-panel.scss
+++ b/src/assets/scss/components/customize-icons-panel.scss
@@ -47,5 +47,10 @@
       display: inline;
       padding: 10px;
     }
+
+    button {
+      margin-right: $m;
+      outline: none;
+    }
   }
 }
