--- a/src/assets/scss/base/inputs.scss
+++ b/src/assets/scss/base/inputs.scss
@@ -16,11 +16,10 @@ input {
     border-right: $light-color 2px solid;
   }
 
-  button:nth-of-type(2) {
-
+  button:nth-child(5),
+  button:nth-child(3) {
     border-radius: 0 25px 25px 0;
     border-right: 0px;
-
   }
 
   .input-grow {
