make the button dynamic

--- a/src/assets/scss/components/buttons.scss
+++ b/src/assets/scss/components/buttons.scss
@@ -6,7 +6,7 @@
   border-radius: 30px;
   display: inline-block;
   line-height: 1.5;
-  padding: 0.375rem 0.75rem;
+  padding: 8px 16px;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
   user-select: none;
