--- a/src/assets/scss/base/titles.scss
+++ b/src/assets/scss/base/titles.scss
@@ -12,6 +12,11 @@ h2 {
   font-weight: $font-weight;
 }
 
+h1 {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .text-center {
   text-align: center;
 }
