--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -1,9 +1,9 @@
 header {
   align-items: center;
-  background: $nav-gradient;
+  background: $light-color;
+  border-bottom: 1px solid $light-gray;
   display: flex;
   justify-content: space-between;
-  padding: $m;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -15,7 +15,6 @@ header {
 
     .logo {
       margin-right: $m;
-      width: 86px;
     }
 
     .brand-text {
@@ -32,13 +31,37 @@ header {
 
     a,
     a:visited {
-      color: $navbar-color;
-      padding: 0 8px;
+      color: $dark-color;
+      margin-left: $l;
+      padding: 0 $s;
       text-decoration: none;
     }
 
     .active {
-      color: $light-color;
+      position: relative;
+
+      &::after {
+        background-color: $primary;
+        bottom: -19px;
+        content: '';
+        height: 5px;
+        left: 0;
+        position: absolute;
+        width: 100%;
+      }
+      // border-bottom: 5px solid $primary;
+    }
+  }
+
+  .container {
+    padding: $m 0;
+  }
+
+  .navigation {
+    &-content {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
     }
   }
 }
