--- a/src/assets/scss/components/tabs.scss
+++ b/src/assets/scss/components/tabs.scss
@@ -1,29 +1,35 @@
 .tabs {
-  margin-top: -67px;
+  margin-top: -10px;
 
   .tab-list {
+    background: $light-color;
+    border-bottom: 1px solid $light-gray;
+    border-top: 1px solid $light-color;
     display: inline-block;
+    margin: 0;
+    padding: 0;
     position: sticky;
-    top: 77px;
+    width: 100%;
 
     &:hover {
       cursor: pointer;
     }
   }
 
+
   .tab-list-item {
-    color: $hyper-link-color;
     display: inline-block;
     list-style: none;
-    margin-bottom: -1px;
+    margin-bottom: -2px;
     padding: 16px;
   }
 
   .tab-list-active {
     background-color: $light-color;
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
+    border-bottom: 3px solid $primary;
     color: $dark-color;
+    font-weight: bold;
+
   }
 }
 
