--- a/src/assets/scss/components/toolbar.scss
+++ b/src/assets/scss/components/toolbar.scss
@@ -1,6 +1,6 @@
 .toolbar {
   align-items: center;
-  background-color: $lightest-gray;
+  // background-color: $lightest-gray;
   display: flex;
   justify-content: flex-end;
   padding: $m;
