--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -1,19 +1,20 @@
+
+$primary: #00CCD1;
+
 $light-color: #fff;
 $dark-color: #000;
-$light-gray: #dedede;
+$light-gray: #EEEFF1;
 $lighter-gray: #d0d0d0;
-$lightest-gray: #eaeaea;
-$dark-gray: #5f5f5f;
+$lightest-gray: #BFC0C1;
+$dark-gray: #7E7F7F;
 $dark-black: #333;
 $primary-light: #fe673a;
 $dark-red: #d60015;
 $hyper-link-color: #0285c4;
 $hyper-link-hover-color: #15578f;
-$buttons: #343a40;
 $command: #c0341d;
 $codes: #505050;
 $nav-border-color: #e3864e;
-$navbar-color: rgba(255, 255, 255, 0.5);
 $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 $modal-background-color: rgba(0, 0, 0, 0.7);
 $shadow-color: rgba(0, 0, 0, 0.5);
