--- a/src/assets/scss/base/links.scss
+++ b/src/assets/scss/base/links.scss
@@ -3,6 +3,7 @@ a:visited,
 a:hover,
 a:active {
   color: $hyper-link-color;
+  font-weight: 400;
   text-decoration: none;
   white-space: nowrap;
 }
