--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -30,5 +30,5 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
 }
 
 .page-header-simple {
-  padding: 100px 0;
+  padding: $xxl 0;
 }
