Finished Team Page, added Footer

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -1,5 +1,6 @@
 footer {
-  background: $lightest-gray;
+  background: $light-color;
+  border-top: 38px solid $light-gray;
   bottom: 0;
 
   .container {
@@ -10,5 +11,27 @@ footer {
 
   a {
     margin: $s;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  .footer-block {
+    align-items: flex-start;
+    display: flex;
+    margin: $l;
+
+    span {
+      font-weight: bold;
+    }
+
+    &-list {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+    }
   }
 }
