--- a/src/assets/scss/components/team-block.scss
+++ b/src/assets/scss/components/team-block.scss
@@ -114,6 +114,7 @@ $role-font-size: 16px;
   &-image {
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 124px;
     height: 124px;
     width: 124px;
   }
