--- a/src/assets/scss/pages/team.scss
+++ b/src/assets/scss/pages/team.scss
@@ -1,3 +1,7 @@
+$background-slack: url('../../images/pages/slack_panel.png') left center no-repeat;
+$font-size-h4: 28px;
+$font-size-p: 16px;
+
 .team-page {
   display: flex;
   flex-direction: column;
@@ -32,6 +36,37 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+    }
+  }
+
+  &-cta {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+
+
+    .slack-cta {
+      align-items: center;
+      background: $background-slack;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 10px;
+      padding-left: 35%;
+      width: 400px;
+
+      h4 {
+        font-size: $font-size-h4;
+        margin: 0;
+        padding-bottom: 16px;
+      }
+
+      p {
+        font-size: $font-size-p;
+        line-height: 30px;
+        text-align: center;
+      }
     }
   }
 }
