--- a/src/assets/scss/components/team-block.scss
+++ b/src/assets/scss/components/team-block.scss
@@ -5,6 +5,7 @@ $role-font-size: 16px;
 .team-member {
   align-items: center;
   background-repeat: no-repeat;
+  background-size: 310px;
   border: 1px solid #707070;
   display: flex;
   flex-direction: column;
