--- a/src/assets/scss/variables/type.scss
+++ b/src/assets/scss/variables/type.scss
@@ -1,5 +1,10 @@
-$font-family: 'Lato', sans-serif;
-$font-size: 16px;
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+$font-family: 'Roboto', sans-serif;
+$header-font-family: 'Spartan',  sans-serif;
+$font-size: 14px;
 $font-weight: 300;
 $line-height: 1.5em;
-$color: #141823;
+$subheadline-font-size: 24px;
+$small-font: 10px;
