--- a/src/assets/scss/components/badge.scss
+++ b/src/assets/scss/components/badge.scss
@@ -1,5 +1,5 @@
 .badge {
-  background-color: #6c757d;
+  background-color: $lightest-gray;
   border-radius: 100px;
   color: $light-color;
   display: inline-block;
