--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -2,15 +2,34 @@
   border-top: 1px solid $lightest-gray;
   bottom: 0;
   left: 0;
+  padding: $l 0;
   padding-bottom: $m;
+  position: relative;
   width: 100%;
   z-index: $z-index-10;
 
   .container {
+    align-items: center;
+    display: flex;
     padding: 0;
 
     h2 {
       line-height: 0.4em;
     }
+  }
+
+  &-left {
+    display: flex;
+    flex-direction: column;
+    margin: 0 $l;
+
+    strong {
+      font-size: $small-font;
+    }
+  }
+
+  .close-button {
+    position: absolute;
+    right: 10px;
   }
 }
