--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -28,7 +28,7 @@
     }
 
     input.search-input {
-      border-bottom: 1px solid #000;
+      border-bottom: 1px solid $dark-gray;
       border-radius: 0;
       padding-left: 25px;
       width: 50%;
