--- a/src/assets/scss/components/customize-icons-panel.scss
+++ b/src/assets/scss/components/customize-icons-panel.scss
@@ -1,5 +1,5 @@
 .icons-picker-footer {
-  color: $dark-gray;
+  color: $dark-color;
   display: flex;
   font-weight: 300;
   justify-content: space-between;
@@ -64,7 +64,7 @@
 
     .btn {
       border: 1px solid $dark-gray;
-      color: $color;
+      color: $dark-color;
       font-weight: bold;
       margin: 0 5px;
     }
