--- a/src/assets/scss/components/dropdown.scss
+++ b/src/assets/scss/components/dropdown.scss
@@ -16,8 +16,7 @@
 
 .fill-dropdown {
   background: $primary;
-  border-radius: $xl;
-  box-shadow: 0px $s $s -6px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 
   select {
     color: $light-color;
