--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -9,9 +9,13 @@
   z-index: $z-index-10;
 
   .container {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     padding: 0;
+
+    span {
+      margin-top: 6px;
+    }
 
     h2 {
       line-height: 0.4em;
