--- a/src/assets/scss/layout/general.scss
+++ b/src/assets/scss/layout/general.scss
@@ -1,5 +1,5 @@
 body {
-  color: $color;
+  color: $dark-color;
   font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
