--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -1,5 +1,5 @@
 .how-to-use-block {
-  border-top: 1px solid $lightest-gray;
+  border-top: 1px solid $light-gray;
   bottom: 0;
   left: 0;
   padding: $l 0;
