--- a/src/assets/scss/pages/team.scss
+++ b/src/assets/scss/pages/team.scss
@@ -1,6 +1,7 @@
 $background-slack: url('../../images/pages/slack_panel.png') left center no-repeat;
-$font-size-h4: 28px;
+$font-size-28px: 28px;
 $font-size-p: 16px;
+$font-size-20px: 20px;
 
 .team-page {
   display: flex;
@@ -22,6 +23,15 @@ $font-size-p: 16px;
       margin-top: $xxl;
       position: relative;
       width: 310px;
+
+      h2 {
+        font-size: $font-size-28px;
+        font-weight: bold;
+      }
+
+      p {
+        font-size: $font-size-20px;
+      }
 
       h2,
       p {
@@ -67,7 +77,7 @@ $font-size-p: 16px;
       width: 400px;
 
       h4 {
-        font-size: $font-size-h4;
+        font-size: $font-size-28px;
         margin: 0;
         padding-bottom: 16px;
       }
