--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -15,7 +15,8 @@ $hyper-link-hover-color: #15578f;
 $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 $light-color: #fff;
 $light-gray: #EEEFF1;
-$light-overlay-gradient: linear-gradient(180deg, #020024 0%, white 0%, #131313 100%);
+$light-overlay-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+;
 $lighter-gray: #d0d0d0;
 $lightest-gray: #BFC0C1;
 $modal-background-color: rgba(0, 0, 0, 0.7);
