--- a/src/assets/scss/base/titles.scss
+++ b/src/assets/scss/base/titles.scss
@@ -11,11 +11,13 @@ h6 {
 h1,
 h2 {
   font-weight: $font-weight;
+  line-height: 1.5em;
+  margin: 0;
 }
 
 h1 {
   display: inline-block;
-  font-weight: bold;
+  font-weight: 800;
   position: relative;
   text-transform: uppercase;
   z-index: 1;
@@ -39,4 +41,6 @@ h1 {
 p.subheadline {
   font-family: $header-font-family;
   font-size: $subheadline-font-size;
+  font-weight: 300;
+  line-height: 37px;
 }
