--- a/src/assets/scss/components/team-block.scss
+++ b/src/assets/scss/components/team-block.scss
@@ -36,6 +36,7 @@ $role-font-size: 16px;
     font-weight: bold;
     position: absolute;
     right: 28px;
+    text-align: right;
     text-transform: uppercase;
     z-index: 1;
   }
